--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import '~@angular/material/theming';
+@include mat-core();
+
+$operator-primary: mat-palette($mat-gray);
+$operator-accent: mat-palette($mat-gray, A700);
+
+$operator-warn: mat-palette($mat-red);
+
+$operator-theme: mat-dark-theme($operator-primary, $operator-accent, $operator-warn);
+
+$custom-typography: mat-typography-config(
+  $font-family: 'Montserrat'
+);
+
+@include angular-material-theme($operator-theme);
+@include mat-core($custom-typography);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Montserrat', sans-serif !important; }
