--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @include mat-core();
 
 $operator-primary: mat-palette($mat-gray);
-$operator-accent: mat-palette($mat-gray, A700);
+$operator-accent: mat-palette($mat-brown, A700);
 
 $operator-warn: mat-palette($mat-red);
 
