--- a/src/components/login/login.component.scss
+++ b/src/components/login/login.component.scss
@@ -1,4 +1,6 @@
 .main-container {
-    background:url(../../assets/img/font2.jpg);
+    background-image:url(../../assets/img/font2.jpg) ;
+    width: 100%;
+    height: 100%;
     position: fixed;
   }
