--- a/src/components/board/board.component.html
+++ b/src/components/board/board.component.html
@@ -10,49 +10,72 @@
                 <input type="text" matInput placeholder="Fecha de finalización">
         </mat-form-field>
         <mat-form-field fxFlex>
-                <input type="text" matInput placeholder="Competidor">
-            </mat-form-field>
-            <mat-form-field fxFlex>
-                    <input type="text" matInput placeholder="Estado">
-            </mat-form-field>
+            <input type="text" matInput placeholder="Competidor">
+        </mat-form-field>
+        <mat-form-field fxFlex>
+                <input type="text" matInput placeholder="Estado">
+        </mat-form-field>
+        <div>
+                <button class="icons" mat-icon-button color="primary" (click)="newMission()" ><mat-icon matPrefix>add_circle</mat-icon></button>
+        </div>
     </div>
     <mat-progress-bar *ngIf="algo==true"></mat-progress-bar>
     <div >
-        <table mat-table [dataSource]="userDataSource" fxFill>
+        <table mat-table [dataSource]="userDataSource" fxFill >
 
             <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef>ID</th>
-                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">ID</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.id}}</span></td>
             </ng-container>
 
             <ng-container matColumnDef="date_start">
-                <th mat-header-cell *matHeaderCellDef>Fecha inicio</th>
-                <td mat-cell *matCellDef="let element">{{element.date_start}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">FECHA INICIAL</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.date_start}}</span></td>
             </ng-container>
 
             <ng-container matColumnDef="date_end">
-                <th mat-header-cell *matHeaderCellDef>Fecha fin</th>
-                <td mat-cell *matCellDef="let element">{{element.date_end}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">FECHA FINAL</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.date_end}}</span></td>
             </ng-container>
 
             <ng-container matColumnDef="competitor">
-                <th mat-header-cell *matHeaderCellDef>Competidor</th>
-                <td mat-cell *matCellDef="let element">{{element.competitor}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">COCMPETIDOR</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.competitor}}</span></td>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>Estado de la mision</th>
-                <td mat-cell *matCellDef="let element">{{element.status}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">STATUS</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.status}}</span></td>
             </ng-container>
             
             <ng-container matColumnDef="progression">
-                <th mat-header-cell *matHeaderCellDef>Avance</th>
-                <td mat-cell *matCellDef="let element">{{element.progression}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">AVANCE</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.progression}}</span></td>
             </ng-container>
 
             <ng-container matColumnDef="captain">
-                <th mat-header-cell *matHeaderCellDef>Capitan</th>
-                <td mat-cell *matCellDef="let element">{{element.captain}}</td>
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">CAPITAN</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.captain}}</span></td>
+            </ng-container>
+
+            <ng-container matColumnDef="options">
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">OPCIONES</span></th>
+                <td mat-cell *matCellDef="let element">
+                    <span fxLayoutAlign="center">
+                        <button mat-icon-button class="icons">
+                            <mat-icon>create</mat-icon>
+                        </button>
+                        <button mat-icon-button class="icons">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                        <button mat-icon-button class="icons">
+                            <mat-icon>pageview</mat-icon>
+                        </button>
+                        <button mat-icon-button color="warn" class="icons">
+                            <mat-icon>not_interested</mat-icon>
+                        </button>
+                    </span>
+                </td>
             </ng-container>
 
 
