--- a/src/components/board/board.component.scss
+++ b/src/components/board/board.component.scss
@@ -1,3 +1,10 @@
 .top-container {
     padding: 1rem
 }
+.icons{
+    font-size: 50px;
+    transition:2s;
+}
+.icons :hover{
+    transform: scale(1.5)
+}
