--- a/src/components/sidenav/sidenav.component.html
+++ b/src/components/sidenav/sidenav.component.html
@@ -1,20 +1,32 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-        <mat-toolbar color="primary" class="example-toolbar">
-          <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-          <h1 class="example-app-name">Responsive App</h1>
-        </mat-toolbar>
+  <mat-toolbar style="background: url(../../assets/img/font2.jpg)">
+    <mat-toolbar-row>
+        <div fxLayout="row" fxLayoutAlign="start center" fxFill>
+            <div >
+                <button mat-icon-button (click)="snav.toggle()"  (click)="changeIcon()">
+                    <mat-icon class="apphead">
+                        <span *ngIf="valueIcon">menu</span> 
+                        <span *ngIf="!valueIcon">menu_open</span> 
+                    </mat-icon>
+                </button>
+            </div>
+            <div >
+                    <h1 class="apphead">MISIONES</h1>
+            </div>
+        </div>
+    </mat-toolbar-row>
+</mat-toolbar>
       
         <mat-sidenav-container class="example-sidenav-container"
                                [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
           <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                        [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
             <mat-nav-list>
-              <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+              <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav" routerLinkActive="active" >{{nav.name}}</a>
             </mat-nav-list>
           </mat-sidenav>
-      
           <mat-sidenav-content>
-          
+            <router-outlet></router-outlet>
           </mat-sidenav-content>
         </mat-sidenav-container>
       </div>
