--- a/src/components/sidenav/sidenav.component.scss
+++ b/src/components/sidenav/sidenav.component.scss
@@ -6,6 +6,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+
   }
   
   .example-is-mobile .example-toolbar {
@@ -14,8 +15,8 @@
     z-index: 2;
   }
   
-  h1.example-app-name {
-    margin-left: 8px;
+.apphead {
+   color: white;
   }
   
   .example-sidenav-container {
@@ -30,3 +31,6 @@
     flex: 1 0 auto;
   }
   
+  .mat-nav-list a.active {
+    background: rgba(128, 128, 128, 0.158);
+  }
