--- a/src/components/sku-s/sku-s.component.html
+++ b/src/components/sku-s/sku-s.component.html
@@ -1,1 +1,54 @@
-<p>sku-s works!</p>
+<div fxLayout="column" fxFill>
+    <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="space-between center" class="top-container">
+                    <h1 fxFlexOffset="45">SKU'S</h1>
+                    <button mat-icon-button color="primary" class="icons" (click)="newSku()"><mat-icon matPrefix>add_circle</mat-icon></button>
+    </div>
+    <mat-progress-bar *ngIf="algo==true"></mat-progress-bar>
+    <div>
+        <table mat-table [dataSource]="skusDataSource" class="board" >
+
+            <ng-container matColumnDef="sku">
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">SKU</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.sku}}</span></td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">NOMBRE</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.name}}</span></td>
+            </ng-container>
+
+            <ng-container matColumnDef="class">
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">CLASE</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.class}}</span></td>
+            </ng-container>
+
+            <ng-container matColumnDef="subclass">
+                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">SUBCLASE</span></th>
+                <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.subclass}}</span></td>
+            </ng-container>
+
+            <ng-container matColumnDef="options">
+                    <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">OPCIONES</span></th>
+                    <td mat-cell *matCellDef="let element">
+                        <span fxLayoutAlign="center">
+                            <button mat-icon-button class="icons">
+                                <mat-icon>create</mat-icon>
+                            </button>
+                            <button mat-icon-button class="icons">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                            <button mat-icon-button class="icons">
+                                <mat-icon>pageview</mat-icon>
+                            </button>
+                            <button mat-icon-button color="warn" class="icons">
+                                <mat-icon>not_interested</mat-icon>
+                            </button>
+                        </span>
+                    </td>
+                </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>.
+      </table>
+    </div>
+</div>
