--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import '~@angular/material/theming';
 @include mat-core();
+$admin-primary: mat-palette($mat-green);
+$admin-accent: mat-palette($mat-green, A700);
+$admin-warn: mat-palette($mat-red);
 
-$operator-primary: mat-palette($mat-gray);
-$operator-accent: mat-palette($mat-brown, A700);
-
-$operator-warn: mat-palette($mat-red);
-
-$operator-theme: mat-dark-theme($operator-primary, $operator-accent, $operator-warn);
+$admin-theme: mat-light-theme($admin-primary, $admin-accent, $admin-warn);
 
 $custom-typography: mat-typography-config(
   $font-family: 'Montserrat'
 );
 
-@include angular-material-theme($operator-theme);
+@include angular-material-theme($admin-theme);
 @include mat-core($custom-typography);
 
 html, body { height: 100%; }
