campo para busqueda por filtro

--- a/src/components/sidenav/sidenav.component.html
+++ b/src/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-  <mat-toolbar style="background: url(../../assets/img/font2.jpg)">
+  <mat-toolbar color="accent">
     <mat-toolbar-row>
         <div fxLayout="row" fxLayoutAlign="start center" fxFill>
             <div >
@@ -31,5 +31,4 @@
         </mat-sidenav-container>
       </div>
       
-      <div *ngIf="!shouldRun">Please open on Stackblitz to see result</div>
       
