--- a/src/components/board/board.component.html
+++ b/src/components/board/board.component.html
@@ -1,30 +1,23 @@
-<div fxLayout="column" fxFill >
+<div fxLayout="column" fxFill>
     <div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="20px" class="top-container">
-        <!-- <mat-form-field fxFelx>
-            <input type="text" matInput placeholder="Buscar mision" (upKey)="buscar()">
-        </mat-form-field> -->
-        <mat-form-field fxFlex>
-            <input type="text" matInput placeholder="Fecha de inicio">
-        </mat-form-field>
-        <mat-form-field fxFlex>
-                <input type="text" matInput placeholder="Fecha de finalización">
-        </mat-form-field>
-        <mat-form-field fxFlex>
-            <input type="text" matInput placeholder="Competidor">
-        </mat-form-field>
-        <mat-form-field fxFlex>
-                <input type="text" matInput placeholder="Estado">
-        </mat-form-field>
-        <div>
+        <div fxLayout="column" fxFlex="95">
+            <mat-form-field fxFill>
+                <input type="text" matInput placeholder="Buscar mision" (upKey)="buscar()">
+            </mat-form-field>
+        </div>
+        <div fxLayout="column" fxFlex="5">   
+            <span>
                 <button class="icons" mat-icon-button color="primary" (click)="newMission()" ><mat-icon matPrefix>add_circle</mat-icon></button>
+            </span>
         </div>
     </div>
     <mat-progress-bar *ngIf="algo==true"></mat-progress-bar>
-    <div >
-        <table mat-table [dataSource]="userDataSource" fxFill >
+    <div class="content-table">
+        <table mat-table [dataSource]="dataSource"multiTemplateDataRows
+        class="mat-elevation-z8">
 
             <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">ID</span></th>
+                <th mat-header-cell *matHeaderCellDef ><span fxLayoutAlign="center">ID</span></th>
                 <td mat-cell *matCellDef="let element"><span fxLayoutAlign="center">{{element.id}}</span></td>
             </ng-container>
 
@@ -61,26 +54,47 @@
             <ng-container matColumnDef="options">
                 <th mat-header-cell *matHeaderCellDef><span fxLayoutAlign="center">OPCIONES</span></th>
                 <td mat-cell *matCellDef="let element">
-                    <span fxLayoutAlign="center">
-                        <button mat-icon-button class="icons">
-                            <mat-icon>create</mat-icon>
-                        </button>
-                        <button mat-icon-button class="icons">
-                            <mat-icon>delete</mat-icon>
-                        </button>
-                        <button mat-icon-button class="icons">
-                            <mat-icon>pageview</mat-icon>
-                        </button>
-                        <button mat-icon-button color="warn" class="icons">
-                            <mat-icon>not_interested</mat-icon>
-                        </button>
-                    </span>
+                        <span fxLayoutAlign="center">
+                                <button mat-icon-button class="icons" (mouseenter) ="mouseEnter()" (mouseleave)="mouseLeave()" >
+                                    <mat-icon>create</mat-icon>
+                                </button>
+                                <button mat-icon-button class="icons" (mouseenter) ="mouseEnter()" (mouseleave)="mouseLeave()" (click)="deleteRow(element)">
+                                    <mat-icon>delete</mat-icon>
+                                </button>
+                                <button mat-icon-button class="icons" (mouseenter) ="mouseEnter()" (mouseleave)="mouseLeave()">
+                                    <mat-icon>pageview</mat-icon>
+                                </button>
+                                <button mat-icon-button color="warn" class="icons"(mouseenter) ="mouseEnter()" (mouseleave)="mouseLeave()">
+                                    <mat-icon>not_interested</mat-icon>
+                                </button>
+                            </span>
                 </td>
             </ng-container>
-
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                      <div class="example-element-detail"
+                           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                        <div class="example-element-diagram">
+                          <div class="example-element-position"> {{element.id}} </div>
+                          <div class="example-element-name"> {{element.date_start}} - {{element.date_end}}</div>
+                          <div class="example-element-weight"> {{element.status}} </div>
+                          <div class="example-element-weight"> {{element.competitor}} </div>
+                        </div>
+                        <div class="example-element-description">
+                          {{element.description}}
+                          <span class="example-element-description-attribution"></span>
+                        </div>
+                      </div>
+                    </td>
+                  </ng-container>
+                
+                  <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky: true"></tr>
+                  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+                      class="example-element-row"
+                      [class.example-expanded-row]="expandedElement === element"  
+                      (click)="expandedElement = (expandedElement === element || buttonActivator)  ?  null:  element">
+                  </tr>
+                  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
     </div>
 
