--- a/src/components/board/board.component.scss
+++ b/src/components/board/board.component.scss
@@ -1,3 +1,53 @@
+table {
+    width: 100%;
+  }
+  
+  tr.example-detail-row {
+    height: 0;
+  }
+  
+  tr.example-element-row:not(.example-expanded-row):hover {
+    background: rgba(231, 114, 114, 0.63);
+  }
+  
+  tr.example-element-row:not(.example-expanded-row):active {
+    background: rgba(231, 114, 114, 0.63);
+  }
+  
+  .example-element-row td {
+    border-bottom-width: 0;
+  }
+  
+  .example-element-detail {
+    overflow: hidden;
+    display: flex;
+  }
+  
+  .example-element-diagram {
+    min-width: 80px;
+    border: 2px solid black;
+    padding: 8px;
+    font-weight: lighter;
+    margin: 8px 0;
+    height: 104px;
+  }
+  
+  .example-element-symbol {
+    font-weight: bold;
+    font-size: 40px;
+    line-height: normal;
+  }
+  
+  .example-element-description {
+    padding: 16px;
+  }
+  
+  .example-element-description-attribution {
+    opacity: 0.5;
+  }
+  .board{
+    width: 100%;
+}
 .top-container {
     padding: 1rem
 }
@@ -8,3 +58,9 @@
 .icons :hover{
     transform: scale(1.5)
 }
+div.content-table {
+    overflow: auto;
+    margin: 2%;
+    height: 75%;
+  }
+  
