--- a/src/components/captain-s/captain-s.component.html
+++ b/src/components/captain-s/captain-s.component.html
@@ -1,15 +1,11 @@
 <div fxLayout="column" fxFill >
-        <div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="20px" class="top-container">
-            <mat-form-field fxFelx>
-                <input type="text" matInput placeholder="Buscar capitan" (upKey)="buscar()">
-            </mat-form-field>
-            <div>
-                    <button mat-stroked-button color="primary" (click)="newCaptain({}, true)"><mat-icon matPrefix>add</mat-icon>Agregar capitan</button>
-            </div>
+        <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="space-between center" class="top-container">
+                <h1 fxFlexOffset="45">CAPITANES</h1>
+                <button mat-icon-button color="primary" class="icons" (click)="newSku()"><mat-icon matPrefix>add_circle</mat-icon></button>
         </div>
         <mat-progress-bar *ngIf="algo==true"></mat-progress-bar>
-        <div >
-            <table mat-table [dataSource]="captainDataSource" fxFill>
+        <div class="content-table" >
+            <table mat-table [dataSource]="captainDataSource" class="board" >
     
                 <ng-container matColumnDef="id">
                     <th mat-header-cell *matHeaderCellDef>ID</th>
@@ -31,9 +27,9 @@
                     <td mat-cell *matCellDef="let element">{{element.misions}}</td>
                 </ng-container>    
     
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
         </div>
     
-    </div>
+</div>
