--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import '~@angular/material/theming';
 @include mat-core();
-$admin-primary: mat-palette($mat-green);
-$admin-accent: mat-palette($mat-green, A700);
-$admin-warn: mat-palette($mat-red);
 
-$admin-theme: mat-light-theme($admin-primary, $admin-accent, $admin-warn);
+$operator-primary: mat-palette($mat-red);
+$operator-accent: mat-palette($mat-red, A700);
+
+$operator-warn: mat-palette($mat-red);
+
+$operator-theme: mat-light-theme($operator-primary, $operator-accent, $operator-warn);
 
 $custom-typography: mat-typography-config(
   $font-family: 'Montserrat'
 );
 
-@include angular-material-theme($admin-theme);
+@include angular-material-theme($operator-theme);
 @include mat-core($custom-typography);
 
 html, body { height: 100%; }
