--- a/src/components/board/board.component.scss
+++ b/src/components/board/board.component.scss
@@ -15,6 +15,7 @@ table {
   }
   
   .example-element-row td {
+    
     border-bottom-width: 0;
   }
   
@@ -24,12 +25,13 @@ table {
   }
   
   .example-element-diagram {
-    min-width: 80px;
-    border: 2px solid black;
+    min-width: 95%;
+    border: 2px solid rgb(214, 53, 53);
+    border-radius:5px;
     padding: 8px;
     font-weight: lighter;
     margin: 8px 0;
-    height: 104px;
+    height: 250px;
   }
   
   .example-element-symbol {
@@ -59,7 +61,9 @@ table {
     transform: scale(1.5)
 }
 div.content-table {
-    overflow: auto;
+  display: block;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
     margin: 2%;
     height: 75%;
   }
