diseño del login

--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -9,7 +9,7 @@
     fxLayoutAlign="center center">
     <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap=".5rem" fxFill>
       <div fxFlex>
-        <img src="./assets/img/logo.png" style="height: 15rem">
+        <img src="./assets/img/logo-red.png" style="height: 10rem">
       </div>
       <form fxLayout="column"
             fxLayoutAlign="center"
@@ -34,7 +34,7 @@
             Correo electrónico <strong>requerido</strong>
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearence="outline">
+        <mat-form-field appearance="outline">
           <mat-label>Contraseña</mat-label>
           <input
             matInput 
