--- a/src/components/sidenav/sidenav.component.html
+++ b/src/components/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" >
   <mat-toolbar color="accent">
     <mat-toolbar-row>
         <div fxLayout="row" fxLayoutAlign="start center" fxFill>
@@ -11,7 +11,7 @@
                 </button>
             </div>
             <div >
-                    <h1 class="apphead">MISIONES</h1>
+                    <img src="../../assets/img/office-depot-toolbar.png" style="width: 15rem;margin-top: 10px">
             </div>
         </div>
     </mat-toolbar-row>
@@ -21,9 +21,15 @@
                                [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
           <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                        [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-            <mat-nav-list>
-              <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav" routerLinkActive="active" >{{nav.name}}</a>
-            </mat-nav-list>
+            <div>
+              <h4>Misiones</h4>
+            </div>
+            <hr>
+            <div>
+              <mat-nav-list>
+                <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav" routerLinkActive="active" >{{nav.name}}</a>
+              </mat-nav-list>
+            </div>
           </mat-sidenav>
           <mat-sidenav-content>
             <router-outlet></router-outlet>
