--- a/src/components/add-mision/add-mision.component.scss
+++ b/src/components/add-mision/add-mision.component.scss
@@ -8,8 +8,8 @@
    padding: 0;
 }
 .canasta{
-    padding-left: 5%;
     padding-top: 5%;
+    overflow: hidden;
 }
 .square {
     display: block;
@@ -18,4 +18,7 @@
     height: 30%;
     width: 30%;
     overflow: hidden;
+}
+.mat-tab-label {
+    height: 37px;
 }
