--- a/src/components/sku-s/sku-s.component.html
+++ b/src/components/sku-s/sku-s.component.html
@@ -46,7 +46,7 @@
                             <mat-icon>delete</mat-icon>
                         </button>
                         <button mat-icon-button class="icons" (mouseenter) ="mouseEnter()" (mouseleave)="mouseLeave()">
-                            <mat-icon>pageview</mat-icon>
+                            <mat-icon>find_in_page</mat-icon>
                         </button>
                         <button mat-icon-button color="warn" class="icons"(mouseenter) ="mouseEnter()" (mouseleave)="mouseLeave()">
                             <mat-icon>not_interested</mat-icon>
